[gd_scene load_steps=3 format=3 uid="uid://bf7t5evrdlojm"]

[ext_resource type="Script" uid="uid://uuxnvuatpb1w" path="res://UI/dice_tracker.gd" id="1_db5p2"]
[ext_resource type="Theme" uid="uid://cbwkyl6gws1s2" path="res://themes/text.tres" id="1_gw23i"]

[node name="Dice" type="MarginContainer"]
clip_contents = true
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
script = ExtResource("1_db5p2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Delete" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_gw23i")
text = " üóëÔ∏è "

[node name="Roll" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_gw23i")
text = "ROLL"

[node name="DiceAmount" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("1_gw23i")
min_value = 1.0
max_value = 10.0
value = 1.0
rounded = true
allow_greater = true
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="dice_type" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("1_gw23i")
text = "D?"
flat = false
item_count = 6
popup/item_0/text = "D2"
popup/item_0/id = 0
popup/item_1/text = "D4"
popup/item_1/id = 1
popup/item_2/text = "D6"
popup/item_2/id = 2
popup/item_3/text = "D10"
popup/item_3/id = 3
popup/item_4/text = "D12"
popup/item_4/id = 4
popup/item_5/text = "D20"
popup/item_5/id = 5

[node name="result" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_gw23i")
text = "      "

[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Roll" to="." method="_on_roll_pressed"]
[connection signal="pressed" from="HBoxContainer/result" to="." method="_on_result_pressed"]
